jilles      2006/01/22 19:24:10 UTC	(20060122-4667)
  Log:
  Don't give back dalnet-style +r on nick change
  if they are still MU_WAITAUTH.
  

  Changes:	Modified:
  +1 -1		trunk/protocol/bahamut.c (File Modified) 
  +1 -1		trunk/protocol/hyperion.c (File Modified) 
  +1 -1		trunk/protocol/inspircd.c (File Modified) 
  +1 -1		trunk/protocol/solidircd.c (File Modified) 
  +3 -7		trunk/protocol/ultimate3.c (File Modified) 
  +1 -1		trunk/protocol/unreal.c (File Modified) 


nenolod     2006/01/22 18:19:57 UTC	(20060122-4665)
  Log:
  s/1.0-RC1/1.0rc1/i
  

  Changes:	Modified:
  +11 -11	trunk/configure (File Modified) 
  +1 -1		trunk/configure.ac (File Modified) 


nenolod     2006/01/22 18:18:31 UTC	(20060122-4663)
  Log:
  Some minor cleanups here.
  

  Changes:	Modified:
  +1 -1		trunk/src/services.c (File Modified) 


nenolod     2006/01/22 18:14:34 UTC	(20060122-4661)
  Log:
  Updates to the release notes.
  

  Changes:	Modified:
  +2 -0		trunk/doc/RELEASE (File Modified) 


jilles      2006/01/22 17:42:46 UTC	(20060122-4659)
  Log:
  Add a return value for ban() indicating the
  number of bans added (not present yet).
  

  Changes:	Modified:
  +1 -1		trunk/include/extern.h (File Modified) 
  +5 -4		trunk/src/services.c (File Modified) 


jilles      2006/01/22 16:09:51 UTC	(20060122-4657)
  Log:
  Mention ban exception removal in some help files.
  

  Changes:	Modified:
  +2 -1		trunk/help/cservice/akick (File Modified) 
  +2 -0		trunk/help/cservice/kickban (File Modified) 
  +2 -1		trunk/help/cservice/set_staffonly (File Modified) 


jilles      2006/01/22 15:22:29 UTC	(20060122-4655)
  Log:
  Remove ban exceptions when an unauthorized user
  joins a staffonly channel.
  

  Changes:	Modified:
  +1 -0		trunk/modules/chanserv/main.c (File Modified) 


jilles      2006/01/22 15:06:48 UTC	(20060122-4653)
  Log:
  On /cs kickban <nick>, remove ban exceptions matching <nick>.
  

  Changes:	Modified:
  +8 -0		trunk/modules/chanserv/kick.c (File Modified) 

